--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         packages: aqtinstall
     - run: aqt install-qt windows desktop 6.3.0 win64_msvc2019_64 -m qtmultimedia
-    - run: aqt install-tool windows desktop tools_ifw qt.tools.ifw.43
+#    - run: aqt install-tool windows desktop tools_ifw qt.tools.ifw.43
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
@@ -37,12 +37,12 @@ jobs:
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
     - name: Deploy
-      run: ${{github.workspace}}/6.3.0/msvc2019_64/bin/windeployqt --qmldir ${{github.workspace}}/src/ressources/ui ${{github.workspace}}/build/Release
+      run: ${{github.workspace}}/6.3.0/msvc2019_64/bin/windeployqt --qmldir ${{github.workspace}}/src/ressources/ui ${{github.workspace}}/build/Release/viage.exe
 
     - uses: actions/upload-artifact@v3
       with:
         name: viage
-        path: ${{github.workspace}}/build
+        path: ${{github.workspace}}/build/Release/viage.exe
 
     #- name: Test
       # working-directory: ${{github.workspace}}/build
