--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/woboq/verdigris.git
 [submodule "3rdparty/android_openssl"]
 	path = 3rdparty/android_openssl
-	url = git@github.com:KDAB/android_openssl.git
+	url = https://github.com/KDAB/android_openssl.git
