--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,15 +157,37 @@ if(QT_VERSION_MAJOR EQUAL 6)
     qt_finalize_executable(viage)
 endif()
 
+# Installer setup copyed from https://github.com/christopro/AwesomeWorld-Cmake/blob/main/AwesomeWorld/CMakeLists.txt
+
 set(COMPONENT_NAME_MAIN "Viage")
+set(COMPONENT_NAME_DEPENDENCIES "RuntimeLibs")
 
 install(TARGETS viage DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT ${COMPONENT_NAME_MAIN})
 
 include(InstallRequiredSystemLibraries)
 set(CPACK_GENERATOR "IFW")
-set(CPACK_RESOURCE_FILE_LICENSE  ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE)
 set(CPACK_PACKAGE_VERSION_MAJOR "1")
 set(CPACK_PACKAGE_VERSION_MINOR "0")
+
+set(CPACK_IFW_PACKAGE_NAME "Viage")
+set(CPACK_IFW_PACKAGE_TITLE "Viage")
+set(CPACK_IFW_PACKAGE_PUBLISHER "Viage")
+set(CPACK_IFW_PACKAGE_WIZARD_STYLE "Aero")
+set(CPACK_IFW_PACKAGE_WIZARD_SHOW_PAGE_LIST OFF)
+
+set(CPACK_RESOURCE_FILE_LICENSE  ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE)
+
+if (WIN32)
+    find_program(WINDEPLOYQT windeployqt HINTS "${_qt_bin_dir}")
+    configure_file("${CMAKE_CURRENT_SOURCE_DIR}/deploy-qt-windows.cmake.in" "${CMAKE_CURRENT_SOURCE_DIR}/deploy-qt-windows.cmake" @ONLY)
+
+    set(CPACK_PRE_BUILD_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/deploy-qt-windows.cmake)
+endif()
+
 include(CPack)
+include(CPackIFW)
 
 CPACK_ADD_COMPONENT(${COMPONENT_NAME_MAIN})
+cpack_ifw_configure_component(${COMPONENT_NAME_MAIN} ESSENTIAL FORCED_INSTALLATION)
+
+cpack_ifw_configure_component(${COMPONENT_NAME_MAIN} LICENSES "LGPL License" ${CPACK_RESOURCE_FILE_LICENSE})
