[CI] install script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -162,7 +162,7 @@ endif()
 
 # Installer setup copyed from https://github.com/christopro/AwesomeWorld-Cmake/blob/main/AwesomeWorld/CMakeLists.txt
 
-set(COMPONENT_NAME_MAIN "Viage")
+set(COMPONENT_NAME_MAIN "viage")
 set(COMPONENT_NAME_DEPENDENCIES "RuntimeLibs")
 
 install(TARGETS viage DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT ${COMPONENT_NAME_MAIN})
@@ -172,14 +172,11 @@ set(CPACK_GENERATOR "IFW")
 set(CPACK_PACKAGE_VERSION_MAJOR "1")
 set(CPACK_PACKAGE_VERSION_MINOR "0")
 
-set(CPACK_IFW_PACKAGE_NAME "Install-Viage")
-set(CPACK_IFW_PACKAGE_TITLE "Viage")
-set(CPACK_IFW_PACKAGE_PUBLISHER "Viage")
+set(CPACK_IFW_PACKAGE_NAME "viage")
+set(CPACK_IFW_PACKAGE_TITLE "viage")
+set(CPACK_IFW_PACKAGE_PUBLISHER "viage")
 set(CPACK_IFW_PACKAGE_WIZARD_STYLE "Aero")
 set(CPACK_IFW_PACKAGE_WIZARD_SHOW_PAGE_LIST OFF)
-set(CPACK_MONOLITHIC_INSTALL ON)
-set(CPACK_PACKAGE_EXECUTABLES "${COMPONENT_NAME_MAIN};Viage")
-set(CPACK_CREATE_DESKTOP_LINKS "Viage")
 
 set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE)
 
@@ -194,6 +191,7 @@ include(CPack)
 include(CPackIFW)
 
 CPACK_ADD_COMPONENT(${COMPONENT_NAME_MAIN})
-cpack_ifw_configure_component(${COMPONENT_NAME_MAIN} ESSENTIAL FORCED_INSTALLATION)
 
+cpack_ifw_configure_component(${COMPONENT_NAME_MAIN} ESSENTIAL FORCED_INSTALLATION)
 cpack_ifw_configure_component(${COMPONENT_NAME_MAIN} LICENSES "LGPL License" ${CPACK_RESOURCE_FILE_LICENSE})
+cpack_ifw_configure_component(${COMPONENT_NAME_MAIN} SCRIPT ${CMAKE_CURRENT_SOURCE_DIR}/ci/installScript.qs)
