--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,16 +1,16 @@
 name: Windows
 
-#on: push
 on:
-  release:
-    types: [published]
+  push:
+    tags:
+      - '*'
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
 
 jobs:
-  build:
+  build_release:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
