[Repo] Wrappers out of Data folder for clarity

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(DATA_FOLDER "${CMAKE_CURRENT_SOURCE_DIR}/src/Data")
+set(WRAPPER_FOLDER "${CMAKE_CURRENT_SOURCE_DIR}/src/Wrapper")
 set(INTERFACE_FOLDER "${CMAKE_CURRENT_SOURCE_DIR}/src/Interface")
 set(SERVICE_FOLDER "${CMAKE_CURRENT_SOURCE_DIR}/src/Service")
 set(3RDPARTY_FOLDER "${CMAKE_CURRENT_SOURCE_DIR}/3rdparty")
@@ -71,9 +72,9 @@ set(PROJECT_SOURCES
     src/Service/smtp.hpp
     src/Data/base_data.hpp
     src/Data/base_data.cpp
-    src/Data/Wrapper/wrapped_list.hpp
-    src/Data/Wrapper/wrapped_nested_item.hpp
-    src/Data/Wrapper/wrapped_nested_list.hpp
+    src/Wrapper/wrapped_list.hpp
+    src/Wrapper/wrapped_nested_item.hpp
+    src/Wrapper/wrapped_nested_list.hpp
     src/Data/Items/base_item.hpp
     src/Data/Items/base_item.cpp
     src/Data/Items/address_item.hpp
@@ -112,6 +113,7 @@ set(PROJECT_SOURCES
 
 include_directories(SYSTEM
     "${DATA_FOLDER}"
+    "${WRAPPER_FOLDER}"
     "${INTERFACE_FOLDER}"
     "${SERVICE_FOLDER}"
     "${3RDPARTY_FOLDER}/verdigris/src")
