--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,10 +1,10 @@
 name: Windows
 
 on:
-#  push
-  push:
-    tags:
-      - '*'
+  push
+#  push:
+#    tags:
+#      - '*'
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
@@ -22,17 +22,29 @@ jobs:
       with:
         submodules: recursive
 
-    - uses: actions/setup-python@v1
-    - uses: BSFishy/pip-action@v1
+#    - uses: actions/setup-python@v1
+#    - uses: BSFishy/pip-action@v1
+#      with:
+#        packages: aqtinstall
+#    - run: aqt install-qt windows desktop 6.2.2 win64_msvc2019_64 -m qtmultimedia
+#    - run: aqt install-tool windows desktop tools_ifw qt.tools.ifw.43
+
+    - uses: jurplel/install-qt-action@v2
       with:
-        packages: aqtinstall
-    - run: aqt install-qt windows desktop 6.3.0 win64_msvc2019_64 -m qtmultimedia
-    - run: aqt install-tool windows desktop tools_ifw qt.tools.ifw.43
+       version: '6.2.2'
+       host: 'windows'
+       target: 'desktop'
+       arch: 'win64_msvc2019_64'
+       dir: '${{ github.workspace }}/qt/'
+       install-deps: 'true'
+       modules: 'qtmultimedia'
+       setup-python: 'true'
+       tools: 'tools_ifw,qt.tools.ifw.43'
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_PREFIX_PATH=${{github.workspace}}/6.3.0/msvc2019_64 -DCPACK_IFW_ROOT=${{github.workspace}}/Tools/QtInstallerFramework/4.3
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_PREFIX_PATH=${{github.workspace}}/qt/6.2.2/msvc2019_64 -DCPACK_IFW_ROOT=${{github.workspace}}/qt/Tools/QtInstallerFramework/4.3
 
     - name: Build
       # Build your program with the given configuration
