--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -29,6 +29,8 @@ jobs:
     - run: aqt install-qt windows desktop 6.2.2 win64_msvc2019_64 -m qtmultimedia
     - run: aqt install-tool windows desktop tools_ifw qt.tools.ifw.43
 
+    - uses: seanmiddleditch/gha-setup-ninja@v3
+
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
