--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -19,4 +19,6 @@
     </application>
 <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.MANAGE_DOCUMENTS"/>
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 </manifest>
