--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,10 +1,10 @@
-name: Windows
+name: Linux
 
 on:
-#  push
-  push:
-    tags:
-      - '*'
+  push
+#  push:
+#    tags:
+#      - '*'
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
@@ -15,7 +15,7 @@ jobs:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -26,15 +26,18 @@ jobs:
     - uses: BSFishy/pip-action@v1
       with:
         packages: aqtinstall
-    - run: aqt install-qt windows desktop 6.2.2 win64_msvc2019_64 -m qtmultimedia
-    - run: aqt install-tool windows desktop tools_ifw qt.tools.ifw.43
+    - run: aqt install-qt linux desktop 6.2.2 gcc_64 -m qtmultimedia
+    - run: aqt install-tool linux desktop tools_ifw qt.tools.ifw.43
+
+    - name: install dependencies
+      run: sudo apt install libegl1-mesa mesa-common-dev zlib1g-dev liblzma-dev libbz2-dev
 
 #    - uses: seanmiddleditch/gha-setup-ninja@v3
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_PREFIX_PATH=${{github.workspace}}/6.2.2/msvc2019_64 -DCPACK_IFW_ROOT=${{github.workspace}}/Tools/QtInstallerFramework/4.3
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_PREFIX_PATH=${{github.workspace}}/6.2.2/gcc_64 -DCPACK_IFW_ROOT=${{github.workspace}}/Tools/QtInstallerFramework/4.3
 
     - name: Build
       # Build your program with the given configuration
@@ -43,7 +46,7 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: viage
-        path: ${{github.workspace}}/build/viage-1.0-win64.exe
+        path: ${{github.workspace}}/build/viage-1.0-Linux.run
 
     #- name: Test
       # working-directory: ${{github.workspace}}/build
