[CI] more ifw dependencies

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,10 +1,10 @@
 name: Linux
 
 on:
-  push
-#  push:
-#    tags:
-#      - '*'
+#  push
+  push:
+    tags:
+      - '*'
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
@@ -30,7 +30,7 @@ jobs:
     - run: aqt install-tool linux desktop tools_ifw qt.tools.ifw.43
 
     - name: install dependencies
-      run: sudo apt install libegl1-mesa mesa-common-dev zlib1g-dev liblzma-dev libbz2-dev libxcb-icccm4 libxcb-image0-dev
+      run: sudo apt install libegl1-mesa mesa-common-dev zlib1g-dev liblzma-dev libbz2-dev libxcb-icccm4 libxcb-image0-dev libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libxcb-xkb1 libxkbcommon-x11-0
 
 #    - uses: seanmiddleditch/gha-setup-ninja@v3
 
