--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,10 +1,10 @@
 name: Windows
 
 on:
-#  push
-  push:
-    tags:
-      - '*'
+  push
+#  push:
+#    tags:
+#      - '*'
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
@@ -26,15 +26,18 @@ jobs:
     - uses: BSFishy/pip-action@v1
       with:
         packages: aqtinstall
-    - run: aqt install-qt windows desktop 6.2.2 win64_msvc2019_64 -m qtmultimedia
+    - run: aqt install-qt windows desktop 6.2.2 win64_mingw -m qtmultimedia
     - run: aqt install-tool windows desktop tools_ifw qt.tools.ifw.43
+    - run: aqt install-tool windows desktop tools_mingw90
+           # works as is but not if the speifi version is specified
 
-#    - uses: seanmiddleditch/gha-setup-ninja@v3
+    - name: Set up Ninja
+      uses: seanmiddleditch/gha-setup-ninja@v3
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_PREFIX_PATH=${{github.workspace}}/6.2.2/msvc2019_64 -DCPACK_IFW_ROOT=${{github.workspace}}/Tools/QtInstallerFramework/4.3
+      run: cmake -B ${{github.workspace}}/build -G Ninja -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_PREFIX_PATH=${{github.workspace}}/6.2.2/mingw_64 -DCPACK_IFW_ROOT=${{github.workspace}}/Tools/QtInstallerFramework/4.3 -DCMAKE_CXX_COMPILER=/d/a/viage/viage/Tools/mingw1120_64/bin/g++ -DCMAKE_C_COMPILER=/d/a/viage/viage/Tools/mingw1120_64/bin/gcc
 
     - name: Build
       # Build your program with the given configuration
