--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.14)
 
-if(MSVC)
-    set(CMAKE_C_COMPILER_FORCED TRUE)
-    set(CMAKE_CXX_COMPILER_FORCED TRUE)
-endif()
+#if(MSVC)
+#    set(CMAKE_C_COMPILER_FORCED TRUE)
+#    set(CMAKE_CXX_COMPILER_FORCED TRUE)
+#endif()
 
+project(viage VERSION 0.1 LANGUAGES CXX)
 project(viage VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -152,9 +153,9 @@ target_link_libraries(viage PRIVATE
     Qt6::Svg
     Qt6::Multimedia)
 
-if(MSVC)
-    target_compile_options(viage PRIVATE /Zc:__cplusplus)
-endif()
+#if(MSVC)
+#    target_compile_options(viage PRIVATE /Zc:__cplusplus)
+#endif()
 
 #set_target_properties(viage PROPERTIES
 #    MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
