--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "3rdparty/android_openssl"]
 	path = 3rdparty/android_openssl
 	url = https://github.com/KDAB/android_openssl.git
+[submodule "3rdparty/DuckX"]
+	path = 3rdparty/DuckX
+	url = https://github.com/amiremohamadi/DuckX.git
