--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,9 +2,9 @@ name: Android
 
 on:
 #  push
-  push:
-    tags:
-      - '*'
+#  push:
+#    tags:
+#      - '*'
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
